# ble-mesh-sensor

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  mesh_battery_state.c  mesh_data_packet.c  mesh_data_packet.h  mesh_log.h  mesh_main.c  mesh_misc.c  mesh_misc.h  mesh_node.c  mesh_node.h  mesh_ota_update.c  mesh_ota_update.h  mesh_peer.c  mesh_peer.h  mesh_sensor.c  mesh_sensor.h  mesh_sensor_constants.h  mesh_wifi_connect.c  mesh_wifi_connect.h
